Fix sidenav and navbar overlaps

--- a/svyThemeRoller/medias/themes/theme-servoy.less
+++ b/svyThemeRoller/medias/themes/theme-servoy.less
@@ -1152,8 +1152,10 @@ data-servoyextra-fontawesome > div {
 	    padding-left: 0px;
 	}
 	
+	/** TODO shall i move it into svy-extra itself ? */
 	.svy-sidenav-item {
-		padding: 7px 15px 7px 20px;
+		padding: 7px 35px 7px 20px;
+		margin-right: 0;
 	}
 	
 	.svy-sidenav-item.sn-level-2 {
@@ -1221,6 +1223,10 @@ data-servoyextra-fontawesome > div {
 /* Navbar Bootstrap Extra */
 .navbar {
 	border-radius: 0;
+	z-index: 1001; /* TODO it compensate the z-index 1000 of the sidenav. do i want this ? */
+}
+
+.navbar-collapse {
 }
 
 .bts-extra-navbar.navbar-default {
